# social-interactions-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_gpu_check.ipynb  02_video_analysis.ipynb  03_gaze_model_check.ipynb
outputs/: gaze_estimation_results.txt
scripts/: face_cropper.py  gaze_detection.py  object_detection.py
